@@ -12,12 +12,12 @@ jobs:
 
     env:
       GIT_COMMIT: ${{ github.sha }}
-      QT_BASE_DIR: ${{ github.workspace }}\deps\Qt
       BONJOUR_BASE_DIR: ${{ github.workspace }}\deps\bonjour
+      QT_BASE_DIR: ${{ github.workspace }}\deps\Qt
       QT_VERSION: 5.12.6
       QT_BASE_URL: http://qt.mirror.constant.com/
-      BONJOUR_SDK_HOME: ${{ github.workspace }}\deps\bonjour\BonjourSDK
-      CMAKE_PREFIX_PATH: ${{ github.workspace }}\deps\Qt\5.12.6\msvc2017_64\
+      QT_LIB_DIR: ${{ github.workspace }}\deps\Qt\5.12.6
+      OPENSSL_LIB_DIR: ${{ github.workspace }}\ext\openssl\windows
 
     steps:
     - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
       run: |
         pip install aqtinstall
         python -m aqt install --outputdir $env:QT_BASE_DIR --base $env:QT_BASE_URL $env:QT_VERSION windows desktop win64_msvc2017_64
-        cd $env:QT_BASE_DIR\$env:QT_VERSION\msvc2017_64
+        cd $QT_LIB_DIR\msvc2017_64
         dir
 
     - name: Cache Bonjour
@@ -47,7 +47,7 @@ jobs:
     - name: Install Bonjour SDK
       if: steps.cache-bonjour.outputs.cache-hit != 'true'
       run: |
-        New-Item -Force -ItemType Directory -Path ".\deps\bonjour"
+        New-Item -Force -ItemType Directory -Path $env:BONJOUR_BASE_DIR"
         $client = new-object System.Net.WebClient
         $client.DownloadFile("https://binaries.symless.com/bonjour/BonjourSDK.zip",".\bonjoursdk.zip")
         [System.IO.Compression.ZipFile]::ExtractToDirectory(".\bonjoursdk.zip", $env:BONJOUR_BASE_DIR)
@@ -56,6 +56,8 @@ jobs:
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build
+      env:
+        CMAKE_PREFIX_PATH: "${{ env.QT_LIB_DIR }}\\msvc2017_64\\;${{ env.OPENSSL_LIB_DIR }}\\x64"
       run: |
         mkdir build
         cd build
