@@ -18,7 +18,7 @@ file(GLOB sources "*.cpp")
 
 add_executable(syntool ${sources})
 target_link_libraries(syntool
-    synlib arch base client common io ipc mt net platform server ${libs} ${OPENSSL_LIBS})
+    synlib arch base client common io ipc mt net platform server ${libs})
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
     install (TARGETS syntool DESTINATION ${SYNERGY_BUNDLE_BINARY_DIR})
